--- a/static/css/team_view.css
+++ b/static/css/team_view.css
@@ -33,3 +33,31 @@
     border-bottom: 1px solid black;
     margin: 3px 100px 3px 0;
 }
+
+.wide {
+    padding: 0 10px 0 10px;
+    min-width: 100px;
+}
+
+.narrow {
+    padding: 0 5px 0 5px;
+    min-width: 30px;
+}
+
+@media (max-width: 1523px) {
+    .hide-on-lg-and-down {
+        display: none;
+    }
+}
+
+@media (max-width: 1070px) {
+    .hide-on-med-and-down {
+        display: none;
+    }
+}
+
+@media (max-width: 728px) {
+    .hide-on-sm-and-down {
+        display: none;
+    }
+}
